--- a/jade_delight.html
+++ b/jade_delight.html
@@ -153,7 +153,7 @@ function td(content, className="")
 		const bool = verifyNum();
 		if (bool == true) {
 			window.open(
-            "/results", "_blank");
+            "/hw6/results", "_blank");
 		}
 	};
 
